--- a/satya-noun-service/src/main/resources/application.properties
+++ b/satya-noun-service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-words:boat,book,vote,seat,backpack,partition,groundhog
-#words: icicle,refrigerator,blizzard,snowball
+#words:boat,book,vote,seat,backpack,partition,groundhog
+words: icicle,refrigerator,blizzard,snowball
