--- a/satya-sentence-service/src/main/resources/application.properties
+++ b/satya-sentence-service/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-feign.compression.request.enabled=true
-feign.compression.response.enabled=true
+management.endpoints.web.exposure.include: hystrix.stream
